--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,8 +72,23 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{% url 'cars_list' %}">Carros</a></li>
+        {% if user.is_authenticated %}
+        <!-- <li><a href="{% url 'logout' %}">Logout</a></li> -->
+        <li>Olá, {{ user.username }}</a></li>
         <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
+        {% endif %}
+        {% if not user.is_authenticated %}
+        <li><a href="{% url 'register' %}">Cadastre-se</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+        
+        {% endif %}
+        <li><a href="{% url 'cars_list' %}">Carros</a></li>
+        
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'logout' %}">Sair</a></li>
+        
+        {% endif %}
+
       </ul>
     </nav>
   </header>
